# hyprshot

./: .gitignore  CMakeLists.txt  README.md  hyprpm.toml
src/plugin/: artifact_capture.cpp  artifact_capture.hpp  main.cpp  recording.cpp  recording.hpp  session_launcher.cpp  session_launcher.hpp  timing.cpp  timing.hpp
src/shared/: config.cpp  config.hpp  protocol.cpp  protocol.hpp
src/ui/: capture_overlay.cpp  capture_overlay.hpp  clipboard_utils.cpp  clipboard_utils.hpp  main.cpp  result_thumbnail.cpp  result_thumbnail.hpp  watermark.cpp  watermark.hpp
tests/: config_test.cpp  security_test.cpp  watermark_test.cpp
